# wpust

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  todo.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  config_cmd.rs  goose.rs  main.rs  uninstall.rs  update.rs
src/network/: dns.rs  ip.rs  mod.rs  page_load.rs  response.rs  ssl.rs  whois.rs
src/utils/: mod.rs  url.rs
src/wordpress/: mod.rs  utils.rs
