[package]
name = "wpust"
version = "0.1.0"
edition = "2021"

[dependencies]
open = "5"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
color-eyre = "0.6"
clap = { version = "4.5.51", features = ["derive"] }
dns-lookup = "3.0.1"
url = "2.5"
hickory-resolver = "0.24"
openssl = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
headless_chrome = "1.0"
rascii_art = "0.4.5"
image = "0.24"
