[package]
name = "wpust"
version = "0.1.0"
edition = "2021"
description = "WordPress administration CLI utility — open admin pages in the browser and run network diagnostics"
license = "MIT"
repository = "https://github.com/yelsed/wpust"
readme = "README.md"
keywords = ["wordpress", "cli", "dns", "ssl", "network"]
categories = ["command-line-utilities"]

[dependencies]
open = "5"
crossterm = "0.29.0"
color-eyre = "0.6"
clap = { version = "4.5.51", features = ["derive"] }
dns-lookup = "3.0.1"
url = "2.5"
hickory-resolver = "0.24"
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
rascii_art = "0.4.5"
image = "0.24"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
